--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
+  },
+  "dependencies": {
+    "gitalk": "^1.8.0",
+    "vitepress-plugin-comment-with-giscus": "^1.1.15"
   }
 }
